--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/index.css">
   <title>Gauche ou Droite ?</title>
   <meta property="og:title" content="Gauche ou Droite ?" />
   <meta property="og:type" content="website" />
