add social urls + reload home + favicon + screenshot og:image

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="%PUBLIC_URL%" />
   <meta property="og:image" content="%PUBLIC_URL%/images/screenshot.jpg" />
+  <link rel="icon" href="%PUBLIC_URL%/images/favicons/favicon.png">
 </head>
 <body class="home">
   <div id="mainContainer">
