Add rules (duh!)

--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,15 @@
       <div class="right-side">
         <div id="regles-du-jeu">
           <h2 class="h2">Comment ça marche ?</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam fringilla, odio ac molestie interdum, eros neque rhoncus nibh, in mollis</p>
-          <p>Aenean fermentum dolor eu elementum hendrerit. Pellentesque tincidunt, elit eu lobortis maximus, lorem libero ultrices ipsum, sit amet tincidunt nibh risus ac ligula.Vivamus in neque massa. Sed commodo tellus eget convallis congue. Aenean mattis quam sed libero efficitur ullamcorper.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam fringilla, odio ac molestie interdum, eros neque rhoncus nibh, in mollis</p>
+          <p>Règle n°1 : Parlez le plus possible de <b>Gauche ou Droite ?</b>.</p>
+          <p>Règle n°2 : Parlez le plus possible de <b>Gauche ou Droite ?</b> !</p>
+          <p>Règle n°3 : Faites un don de 100€ à l'équipe, vous savez qu'on le mérite.</p>
+          <p>Règle n°4 : Parlez encore un peu de <b>Gauche ou Droite ?</b>, juste au cas où.</p>
+          <hr>
+          <h2 class="h2">Nan mais comment marche le jeu ?</h2>
+          <p>Ah ça, ben c'est pas très compliqué, on vous montre une photo d'un député, à vous de deviner, juste à sa tête, s'il est de gauche... ou de droite ! (tout de suite, le nom du jeu prend tout son sens)</p>
+          <p>À la fin, on vous donne votre score sur la série un lien de partage pour montrer à vos amis (ceux qui prétendent l'être, en tout cas) sur Facebook ou Twitter combien vous êtes un chef.</p>
+          <p><i>Note : Si vous ne voyez pas le lien de partage c'est qu'on a été fainéant. Mais vous pouvez quand même partager le jeu grâce au lien en haut à droite.</i></p>
         </div>
         <div id="a-propos" style="display: none">
           <h2 class="h2">Qui sommes nous ?</h2>
