Fix typo in rules text

--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,9 @@
           <h2 class="h2">Comment ça marche ?</h2>
           <p>En cette période électorale intense, nombreux sont-ceux qui croient connaître la politique Francaise, mais connaissez vous les députés français ?</p>
           <p>Venez tester vos connaissances dans un petit jeu sympatique (Sisi !) et trés simple ! On vous montre une photo d'un député, à vous de deviner, juste à sa tête, s'il est de gauche... ou de droite ! (tout de suite, le nom du jeu prend tout son sens)</p>
-          <p>Si vous n'êtes pas incollable sur nos députés, vous allez vous rendre compte que les apparances sont bien souvent trompeuses et c'est ça qui est amusant dans <strong class="red">Gauche</strong> ou <strong class="blue">Droite</strong> ?</p>
+          <p>Si vous n'êtes pas incollable sur nos députés, vous allez vous rendre compte que les apparences sont bien souvent trompeuses et c'est ça qui est amusant dans <strong class="red">Gauche</strong> ou <strong class="blue">Droite</strong> ?</p>
           <p>Pour tester votre niveau de connaissance (ou de chance !), on vous proposera de visionner 20 photos de députés de tous partis politique puis on vous donnera votre résultat final.</p>
-          <p>Rappelez-vous, les apparances sont TRÈS souvent trompeuses !</p>
+          <p>Rappelez-vous, les apparences sont TRÈS souvent trompeuses !</p>
           <hr>
           <p><i>Note : Pour garder le jeu simple, nous avons choisi de ne pas inclure les députés centristes ou non déclarés.</i></p>
         </div>
