update Facebook meta + update Facebook image + fix css mobile

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
   <title>Gauche ou Droite ?</title>
   <meta property="og:title" content="Gauche ou Droite ?" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="%PUBLIC_URL%" />
-  <meta property="og:image" content="%PUBLIC_URL%/images/screenshot.jpg" />
+  <meta property="og:url" content="http://www.gauche-ou-droite.fr" />
+  <meta property="og:image" content="http://www.gauche-ou-droite.fr/public/images/screenshot.jpg" />
   <link rel="icon" href="%PUBLIC_URL%/images/favicons/favicon.png">
 </head>
 <body class="home">
