update share link

--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
         <div class="socials">
           <ul>
             <li>
-              <a class="share-link" href="https://www.facebook.com/sharer/sharer.php?u=%PUBLIC_URL%" target="_blank">
+              <a class="share-link" href="https://www.facebook.com/sharer/sharer.php?u=http://www.gauche-ou-droite.fr" target="_blank">
                 <svg height="26px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                     <g id="Black" transform="translate(-200.000000, -160.000000)" fill="#000000">
@@ -150,7 +150,7 @@
               </a>
             </li>
             <li>
-              <a class="share-link" href="https://twitter.com/home?status=%PUBLIC_URL%" target="_blank">
+              <a class="share-link" href="https://twitter.com/home?status=http://www.gauche-ou-droite.fr" target="_blank">
                 <svg height="26px" viewBox="0 0 48 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                     <g id="Black" transform="translate(-300.000000, -164.000000)" fill="#000000">
@@ -161,7 +161,7 @@
               </a>
             </li>
             <li>
-              <a class="share-link" href="https://www.linkedin.com/shareArticle?mini=true&url=%PUBLIC_URL%&title=Gauche%20ou%20Droite%20?&summary=&source=" target="_blank">
+              <a class="share-link" href="https://www.linkedin.com/shareArticle?mini=true&url=http://www.gauche-ou-droite.fr&title=Gauche%20ou%20Droite%20?&summary=&source=" target="_blank">
                 <svg height="26px" viewBox="0 0 44 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                     <g id="Black" transform="translate(-702.000000, -265.000000)" fill="#000000">
