style for github links

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
   <title>Gauche ou Droite ?</title>
   <meta property="og:title" content="Gauche ou Droite ?" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="%PUBLIC_URL%" />
-  <meta property="og:image" content="%PUBLIC_URL%/images/screenshot.jpg" />
+  <meta property="og:url" content="http://www.gauche-ou-droite.fr" />
+  <meta property="og:image" content="http://www.gauche-ou-droite.fr/public/images/screenshot.jpg" />
   <link rel="icon" href="%PUBLIC_URL%/images/favicons/favicon.png">
 </head>
 <body class="home">
@@ -48,6 +48,8 @@
         <div id="a-propos" style="display: none">
           <h2 class="h2">Qui sommes nous ?</h2>
           <p><strong class="red">Gauche</strong> ou <strong class="blue">Droite</strong> ? est un petit jeu réalisé par des novices de la politique pour les novices de la politique ! Pour cela, on a créer une petite application web avec <strong>ReactJS</strong> alimentée par une API en <strong>Python</strong>.</p>
+          <p>Le projet est disponible (en open-source) sur Github :<br> <a class="blue" href="https://github.com/plastocman/gauche-ou-droite">API Back-End</a> & <a class="blue" href="https://github.com/SirWinn3r/gauche-ou-droite-client">Client Front-End</a></p>
+
           <p>Notre petite équipe se compose des personnes suivantes : </p>
           <ul class="members">
             <li>
@@ -66,11 +68,6 @@
               <span class="name">Nicolas RIVIERE (<a class="red" href="http://undefined.fr" target="_blank">Undefined</a>)</span>
               <span class="job">Directeur Artistique / Intégrateur</span>
             </li>
-          </ul>
-          <p>Pour les développeurs, le projet est disponible (en open-source) sur Github:</p>
-          <ul>
-            <li><a href="https://github.com/plastocman/gauche-ou-droite">API Back-End</a></li>
-            <li><a href="https://github.com/SirWinn3r/gauche-ou-droite-client">Client Front-End</a></li>
           </ul>
         </div>
         <div id="mentions-legales" style="display: none">
@@ -144,7 +141,7 @@
       <div class="socials">
         <ul>
           <li>
-            <a class="share-link" href="https://www.facebook.com/sharer/sharer.php?u=%PUBLIC_URL%" target="_blank">
+            <a class="share-link" href="https://www.facebook.com/sharer/sharer.php?u=http://www.gauche-ou-droite.fr" target="_blank">
               <svg height="26px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                   <g id="Black" transform="translate(-200.000000, -160.000000)" fill="#000000">
@@ -155,7 +152,7 @@
             </a>
           </li>
           <li>
-            <a class="share-link" href="https://twitter.com/home?status=%PUBLIC_URL%" target="_blank">
+            <a class="share-link" href="https://twitter.com/home?status=Gauche%20ou%20Droite%20?%20-%20http://www.gauche-ou-droite.fr" target="_blank">
               <svg height="26px" viewBox="0 0 48 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                   <g id="Black" transform="translate(-300.000000, -164.000000)" fill="#000000">
@@ -166,7 +163,7 @@
             </a>
           </li>
           <li>
-            <a class="share-link" href="https://www.linkedin.com/shareArticle?mini=true&url=%PUBLIC_URL%&title=Gauche%20ou%20Droite%20?&summary=&source=" target="_blank">
+            <a class="share-link" href="https://www.linkedin.com/shareArticle?mini=true&url=http://www.gauche-ou-droite.fr&title=Gauche%20ou%20Droite%20?&summary=&source=" target="_blank">
               <svg height="26px" viewBox="0 0 44 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                   <g id="Black" transform="translate(-702.000000, -265.000000)" fill="#000000">
