add css animations

--- a/public/index.html
+++ b/public/index.html
@@ -132,13 +132,13 @@
       </div>
     </div>
     <header>
-      <div class="burger">
+      <div class="burger animated fadeInLeft">
         <span></span>
         <span></span>
         <span></span>
       </div>
 
-      <div class="socials">
+      <div class="socials animated fadeInRight">
         <ul>
           <li>
             <a class="share-link" href="https://www.facebook.com/sharer/sharer.php?u=http://www.gauche-ou-droite.fr" target="_blank">
