--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Gauche ou Droite ?" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://www.gauche-ou-droite.fr" />
-  <meta property="og:image" content="http://www.gauche-ou-droite.fr/public/images/screenshot.jpg" />
+  <meta property="og:image" content="http://www.gauche-ou-droite.fr/images/screenshot.png" />
   <link rel="icon" href="%PUBLIC_URL%/images/favicons/favicon.png">
 </head>
 <body class="home">
