detect landscape orientation + mobile fixes

--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,14 @@
       <section id="godContainer">
       </section>
     </div>
-
+    <div class="landscape-detect">
+      <div class="v-center">
+        <img src="/images/rotate.png" alt="">
+        <p class="text-rotate">
+          Pour jouer à Gauche ou Droite, retourne ton téléphone.
+        </p>
+      </div>
+    </div>
     <footer>
       Copyright © 2017 L'équipe Gauche ou Droite
     </footer>
