Fix meewan's real name in 'Qui sommes nous ?' menu

--- a/public/index.html
+++ b/public/index.html
@@ -89,9 +89,9 @@
             <p><u>Créateur</u>  :<br> <a href="gauche-ou-droite.fr">Gauche ou Droite</a></p>
             <p><u>Responsable publication</u> :<br> Gauche ou Droite – hello@gauche-ou-droite.fr<br />
               Le responsable publication est une personne physique ou une personne morale.</p>
-            <p><u>Webmaster</u> :<br> Ambroise CHRISTEA, Alexandre CHARLIN, Meewan LINN, Nicolas RIVIERE – contact@gauche-ou-droite.fr</p>
+            <p><u>Webmaster</u> :<br> Ambroise CHRISTEA, Alexandre CHARLIN, Raphaël PAOLONI, Nicolas RIVIERE – contact@gauche-ou-droite.fr</p>
             <p><u>Hébergeur</u> :<br> Kimsufi – 2 rue Kellermann - 59100 Roubaix - France</p>
-            <p><u>Crédits</u> :<br> Ambroise CHRISTEA, Alexandre CHARLIN, Meewan LINN, Nicolas RIVIERE</p>
+            <p><u>Crédits</u> :<br> Ambroise CHRISTEA, Alexandre CHARLIN, Raphaël PAOLONI, Nicolas RIVIERE</p>
             <h3 class="h3">2. Conditions générales d’utilisation du site et des services proposés.</h3>
             <p>L’utilisation du site <a href="http://gauche-ou-droite.fr/">gauche-ou-droite.fr</a> implique l’acceptation pleine et entière des conditions générales d’utilisation ci-après décrites. Ces conditions d’utilisation sont susceptibles d’être modifiées ou complétées à tout moment, les utilisateurs du site <a href="http://gauche-ou-droite.fr/">gauche-ou-droite.fr</a> sont donc invités à les consulter de manière régulière.</p>
             <p>Ce site est normalement accessible à tout moment aux utilisateurs. Une interruption pour raison de maintenance technique peut être toutefois décidée par Gauche ou Droite, qui s’efforcera alors de communiquer préalablement aux utilisateurs les dates et heures de l’intervention.</p>
