--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
         <div id="regles-du-jeu">
           <h2 class="h2">Comment ça marche ?</h2>
           <p>En cette période électorale intense, nombreux sont ceux qui croient connaître la politique francaise, mais connaissez vous les députés français ?</p>
-          <p>Venez tester vos connaissances dans un petit jeu sympatique (si si !) et trés simple ! On vous montre une photo d'un député, à vous de deviner, juste à sa tête, s'il est de gauche... ou de droite ! (tout de suite, le nom du jeu prend tout son sens)</p>
+          <p>Venez tester vos connaissances dans un petit jeu sympatique (si si !) et très simple ! On vous montre une photo d'un député, à vous de deviner, juste à sa tête, s'il est de gauche... ou de droite ! (tout de suite, le nom du jeu prend tout son sens)</p>
           <p>Si vous n'êtes pas incollable sur nos députés, vous allez vous rendre compte que les apparences sont bien souvent trompeuses et c'est ça qui est amusant dans <strong class="red">Gauche</strong> ou <strong class="blue">Droite</strong> ?</p>
           <p>Pour tester votre niveau de connaissance (ou de chance !), on vous proposera de visionner 20 photos de députés de tous partis politiques puis on vous donnera votre résultat final.</p>
           <p>Rappelez-vous, les apparences sont TRÈS souvent trompeuses !</p>
@@ -57,7 +57,7 @@
         </div>
         <div id="a-propos" style="display: none">
           <h2 class="h2">Qui sommes nous ?</h2>
-          <p><strong class="red">Gauche</strong> ou <strong class="blue">Droite</strong> ? est un petit jeu réalisé par des novices de la politique pour les novices de la politique ! Pour cela, on a créer une petite application web avec <strong>ReactJS</strong> alimentée par une API en <strong>Python</strong>.</p>
+          <p><strong class="red">Gauche</strong> ou <strong class="blue">Droite</strong> ? est un petit jeu réalisé par des novices de la politique pour les novices de la politique ! Pour cela, on a créé une petite application web avec <strong>ReactJS</strong> alimentée par une API en <strong>Python</strong>.</p>
           <p>Le projet est disponible (en open-source) sur Github :<br> <a class="blue" href="https://github.com/plastocman/gauche-ou-droite">API Back-End</a> & <a class="blue" href="https://github.com/SirWinn3r/gauche-ou-droite-client">Client Front-End</a></p>
 
           <p>Notre petite équipe se compose des personnes suivantes : </p>
